# annotated-index

./: EXPERIMENTS.md  README.md  annotated-index.json  content-policy-violating.txt  languages.json  pyproject.toml  raw-ocr.txt  scores.json
backups/: annotated-index.json  languages.json
scripts/: capitalise_annotation.py  convert_refs_to_int.py  count_languages.py  count_per_canto.py  count_references.py  idk.py  parse_references.py
scripts/examples/: basic.py  cycles.py
scripts/utils/: getter.py
