[tool.poetry]
name = "annotated-index"
version = "0.1.0"
description = ""
authors = ["Louis de Beaumont <debeaumont.louis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
